# AppleMusicDecrypt

./: .gitignore  README.md  agent.js  config.example.toml  config.toml  m3u8.js  m3u8_sv.js  main.py  pyproject.toml
.github/workflows/: main.yml
assets/: storefront_ids.json
src/: adb.py  api.py  cmd.py  config.py  decrypt.py  exceptions.py  metadata.py  mitm.py  mp4.py  quality.py  rip.py  save.py  status.py  types.py  url.py  utils.py
src/models/: __init__.py  album_meta.py  artist_albums.py  artist_info.py  artist_songs.py  playlist_info.py  playlist_meta.py  plsylist_tracks.py  song_data.py  song_lyrics.py  tracks_meta.py
