[tool.poetry]
name = "applemusicdecrypt"
version = "0.1.0"
description = ""
authors = ["WorldObservationLog <wolc@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
regex = "^2023.12.25"
pydantic = "^2.7.0"
loguru = "^0.7.2"
six = "^1.16.0"
lxml = "^5.2.1"
beautifulsoup4 = "^4.12.3"
m3u8 = "^4.1.0"
frida-tools = "^12.3.0"
pure-python-adb = "^0.3.0.dev0"
frida = "^16.2.1"
tenacity = "^8.2.3"
prompt-toolkit = "^3.0.43"
mitmproxy = "^10.3.0"
async-lru = "^2.0.4"
winloop = {version = "^0.1.3", platform = "win32"}
uvloop = [{version = "^0.19.0", platform = "linux"},
          {version = "^0.19.0", platform = "darwin"}]
prettytable = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
